--- a/index.html
+++ b/index.html
@@ -20,206 +20,216 @@
     />
   </head>
   <body>
-    <header class="header">
-      <nav class="header-navigation">
-        <a class="header-logo" href="./index.html">
-          WEB<span class="logo-stu">Studio</span></a
-        >
-        <ul class="header-menu-list">
-          <li class="header-menu-item">
-            <a class="header-menu-lfirst" href="./index.html">Studio</a>
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-lfirst" href="">Portfolio</a>
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-lfirst" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="header-contact">
-        <ul class="header-contact-list">
-          <li class="header-contact-item">
-            <a class="header-contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-contact-item">
-            <a class="header-contact-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </header>
+    <div class="container">
+      <header class="header">
+        <nav class="header-navigation">
+          <a class="header-logo" href="./index.html">
+            WEB<span class="logo-stu">Studio</span></a
+          >
+          <ul class="header-menu-list">
+            <li class="header-menu-item">
+              <a class="header-menu-lfirst" href="./index.html">Studio</a>
+            </li>
+            <li class="header-menu-item">
+              <a class="header-menu-lfirst" href="">Portfolio</a>
+            </li>
+            <li class="header-menu-item">
+              <a class="header-menu-lfirst" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-contact">
+          <ul class="header-contact-list">
+            <li class="header-contact-item">
+              <a class="header-contact-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-contact-item">
+              <a class="header-contact-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </header>
+    </div>
     <main>
-      <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-order-btn" type="button">Order Service</button>
-      </section>
-      <section>
-        <h2 class="visually-hidden">Strategy</h2>
-        <ul class="strategy-list">
-          <li class="strategy-item">
-            <h3 class="strategy-title">Strategy</h3>
-            <p class="strategy-subtitle">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="strategy-item">
-            <h3 class="strategy-title">Punctuality</h3>
-            <p class="strategy-subtitle">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="strategy-item">
-            <h3 class="strategy-title">Diligence</h3>
-            <p class="strategy-subtitle">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="strategy-item">
-            <h3 class="strategy-title">Technologies</h3>
-            <p class="strategy-subtitle">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-image"
-              src="./images/firstimg.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-item-title">Mark Guerrero</h3>
-            <p class="team-subtitle">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-image"
-              src="./images/twise.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-item-title">Tom Ford</h3>
-            <p class="team-subtitle">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-image"
-              src="./images/t.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-item-title">Camila Garcia</h3>
-            <p class="team-subtitle">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-image"
-              src="./images/imgdaniel.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-item-title">Daniel Wilson</h3>
-            <p class="team-subtitle">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-      <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/bank.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Banking App</h3>
-            <p class="portfolio-subtitle">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/cash.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Cashless Payment</h3>
-            <p class="portfolio-subtitle">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/medi.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Meditation App</h3>
-            <p class="portfolio-subtitle">App</p>
-          </li>
-          <li class="portfolio">
-            <img
-              class="portfolio-image"
-              src="./images/taxi.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Taxi Service</h3>
-            <p class="portfolio-subtitle">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/screen.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Screen Illustrations</h3>
-            <p class="portfolio-subtitle">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/online.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Online Courses</h3>
-            <p class="portfolio-subtitle">Marketing</p>
-          </li>
-        </ul>
-      </section>
+      <div class="container">
+        <section class="hero">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-order-btn" type="button">Order Service</button>
+        </section>
+        <section>
+          <h2 class="visually-hidden">Strategy</h2>
+          <ul class="strategy-list">
+            <li class="strategy-item">
+              <h3 class="strategy-title">Strategy</h3>
+              <p class="strategy-subtitle">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="strategy-item">
+              <h3 class="strategy-title">Punctuality</h3>
+              <p class="strategy-subtitle">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="strategy-item">
+              <h3 class="strategy-title">Diligence</h3>
+              <p class="strategy-subtitle">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="strategy-item">
+              <h3 class="strategy-title">Technologies</h3>
+              <p class="strategy-subtitle">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <div class="container">
+        <section class="team">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/firstimg.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-item-title">Mark Guerrero</h3>
+              <p class="team-subtitle">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/twise.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-item-title">Tom Ford</h3>
+              <p class="team-subtitle">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/t.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-item-title">Camila Garcia</h3>
+              <p class="team-subtitle">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/imgdaniel.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-item-title">Daniel Wilson</h3>
+              <p class="team-subtitle">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <div class="container">
+        <section class="portfolio">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/bank.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-title">Banking App</h3>
+              <p class="portfolio-subtitle">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/cash.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-title">Cashless Payment</h3>
+              <p class="portfolio-subtitle">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/medi.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-title">Meditation App</h3>
+              <p class="portfolio-subtitle">App</p>
+            </li>
+            <li class="portfolio">
+              <img
+                class="portfolio-image"
+                src="./images/taxi.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-title">Taxi Service</h3>
+              <p class="portfolio-subtitle">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/screen.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-title">Screen Illustrations</h3>
+              <p class="portfolio-subtitle">Design</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/online.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-title">Online Courses</h3>
+              <p class="portfolio-subtitle">Marketing</p>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
-    <footer class="flow">
-      <a class="flow-logo header-logo" href="./index.html"
-        >WEB<span class="flow-logo-stu">Studio</span></a
-      >
+    <div class="container">
+      <footer class="flow">
+        <a class="flow-logo header-logo" href="./index.html"
+          >WEB<span class="flow-logo-stu">Studio</span></a
+        >
 
-      <p class="flow-subtitle">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+        <p class="flow-subtitle">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
