--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     />
   </head>
   <body>
-    <div class="container">
-      <header class="header">
+    <header class="header">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo" href="./index.html">
             WEB<span class="logo-stu">Studio</span></a
@@ -52,50 +52,58 @@
             </li>
           </ul>
         </address>
-      </header>
-    </div>
-    <main>
-      <div class="container">
-        <section class="hero">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-order-btn" type="button">Order Service</button>
-        </section>
-        <section>
-          <h2 class="visually-hidden">Strategy</h2>
-          <ul class="strategy-list">
-            <li class="strategy-item">
-              <h3 class="strategy-title">Strategy</h3>
-              <p class="strategy-subtitle">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li class="strategy-item">
-              <h3 class="strategy-title">Punctuality</h3>
-              <p class="strategy-subtitle">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="strategy-item">
-              <h3 class="strategy-title">Diligence</h3>
-              <p class="strategy-subtitle">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="strategy-item">
-              <h3 class="strategy-title">Technologies</h3>
-              <p class="strategy-subtitle">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
-        </section>
       </div>
-      <div class="container">
-        <section class="team">
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="container">
+          <div class="hero-wrap">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button class="hero-order-btn" type="button">Order Service</button>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="conteiner-list">
+            <h2 class="visually-hidden">Strategy</h2>
+            <ul class="strategy-list">
+              <li class="strategy-item">
+                <h3 class="strategy-title">Strategy</h3>
+                <p class="strategy-subtitle">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </li>
+              <li class="strategy-item">
+                <h3 class="strategy-title">Punctuality</h3>
+                <p class="strategy-subtitle">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </li>
+              <li class="strategy-item">
+                <h3 class="strategy-title">Diligence</h3>
+                <p class="strategy-subtitle">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </li>
+              <li class="strategy-item">
+                <h3 class="strategy-title">Technologies</h3>
+                <p class="strategy-subtitle">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="team">
+        <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
@@ -143,10 +151,11 @@
               <p class="team-subtitle">UI Designer</p>
             </li>
           </ul>
-        </section>
-      </div>
-      <div class="container">
-        <section class="portfolio">
+        </div>
+      </section>
+
+      <section class="portfolio">
+        <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -216,20 +225,19 @@
               <p class="portfolio-subtitle">Marketing</p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
-    <div class="container">
-      <footer class="flow">
+    <footer class="flow">
+      <div class="container">
         <a class="flow-logo header-logo" href="./index.html"
           >WEB<span class="flow-logo-stu">Studio</span></a
         >
-
         <p class="flow-subtitle">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
