--- a/index.html
+++ b/index.html
@@ -104,53 +104,55 @@
 
       <section class="team">
         <div class="container">
-          <h2 class="team-title">Our Team</h2>
-          <ul class="team-list">
-            <li class="team-item">
-              <img
-                class="team-image"
-                src="./images/firstimg.jpg"
-                alt="Mark Guerrero"
-                width="264"
-                height="260"
-              />
-              <h3 class="team-item-title">Mark Guerrero</h3>
-              <p class="team-subtitle">Product Designer</p>
-            </li>
-            <li class="team-item">
-              <img
-                class="team-image"
-                src="./images/twise.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"
-              />
-              <h3 class="team-item-title">Tom Ford</h3>
-              <p class="team-subtitle">Frontend Developer</p>
-            </li>
-            <li class="team-item">
-              <img
-                class="team-image"
-                src="./images/t.jpg"
-                alt="Camila Garcia"
-                width="264"
-                height="260"
-              />
-              <h3 class="team-item-title">Camila Garcia</h3>
-              <p class="team-subtitle">Marketing</p>
-            </li>
-            <li class="team-item">
-              <img
-                class="team-image"
-                src="./images/imgdaniel.jpg"
-                alt="Daniel Wilson"
-                width="264"
-                height="260"
-              />
-              <h3 class="team-item-title">Daniel Wilson</h3>
-              <p class="team-subtitle">UI Designer</p>
-            </li>
-          </ul>
+          <div class="cont-team">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list">
+              <li class="team-item">
+                <img
+                  class="team-image"
+                  src="./images/firstimg.jpg"
+                  alt="Mark Guerrero"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="team-item-title">Mark Guerrero</h3>
+                <p class="team-subtitle">Product Designer</p>
+              </li>
+              <li class="team-item">
+                <img
+                  class="team-image"
+                  src="./images/twise.jpg"
+                  alt="Tom Ford"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="team-item-title">Tom Ford</h3>
+                <p class="team-subtitle">Frontend Developer</p>
+              </li>
+              <li class="team-item">
+                <img
+                  class="team-image"
+                  src="./images/t.jpg"
+                  alt="Camila Garcia"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="team-item-title">Camila Garcia</h3>
+                <p class="team-subtitle">Marketing</p>
+              </li>
+              <li class="team-item">
+                <img
+                  class="team-image"
+                  src="./images/imgdaniel.jpg"
+                  alt="Daniel Wilson"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="team-item-title">Daniel Wilson</h3>
+                <p class="team-subtitle">UI Designer</p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
