--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
 
       <section class="team">
         <div class="container">
-          <div class="cont-team">
             <h2 class="team-title">Our Team</h2>
             <ul class="team-list">
               <li class="team-item">
@@ -115,8 +114,10 @@
                   width="264"
                   height="260"
                 />
+                <div class="cont-team">          
                 <h3 class="team-item-title">Mark Guerrero</h3>
                 <p class="team-subtitle">Product Designer</p>
+                </div>
               </li>
               <li class="team-item">
                 <img
@@ -126,8 +127,10 @@
                   width="264"
                   height="260"
                 />
+                <div class="cont-team">
                 <h3 class="team-item-title">Tom Ford</h3>
                 <p class="team-subtitle">Frontend Developer</p>
+                </div>
               </li>
               <li class="team-item">
                 <img
@@ -137,8 +140,10 @@
                   width="264"
                   height="260"
                 />
+                <div class="cont-team">
                 <h3 class="team-item-title">Camila Garcia</h3>
                 <p class="team-subtitle">Marketing</p>
+                </div>
               </li>
               <li class="team-item">
                 <img
@@ -148,14 +153,15 @@
                   width="264"
                   height="260"
                 />
+                <div class="cont-team">
                 <h3 class="team-item-title">Daniel Wilson</h3>
                 <p class="team-subtitle">UI Designer</p>
+                </div>
               </li>
             </ul>
           </div>
         </div>
       </section>
-
       <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
@@ -168,9 +174,11 @@
                 width="360"
                 height="300"
               />
+              <div class="cont-item">
               <h3 class="portfolio-item-title">Banking App</h3>
               <p class="portfolio-subtitle">App</p>
-            </li>
+     </div>
+       </li>
             <li class="portfolio-item">
               <img
                 class="portfolio-image"
@@ -179,8 +187,10 @@
                 width="360"
                 height="300"
               />
+              <div class="cont-item">
               <h3 class="portfolio-item-title">Cashless Payment</h3>
-              <p class="portfolio-subtitle">Marketing</p>
+              <p class="portfolio-subtitle">Marketing</p></div>
+
             </li>
             <li class="portfolio-item">
               <img
@@ -190,19 +200,24 @@
                 width="360"
                 height="300"
               />
+                <div class="cont-item">
               <h3 class="portfolio-item-title">Meditation App</h3>
               <p class="portfolio-subtitle">App</p>
+            </div>
+
             </li>
             <li class="portfolio">
               <img
-                class="portfolio-image"
+                class="portfolio-image-4"
                 src="./images/taxi.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300"
               />
+              <div class="cont-item">
               <h3 class="portfolio-item-title">Taxi Service</h3>
-              <p class="portfolio-subtitle">Marketing</p>
+              <p class="portfolio-subtitle">Marketing</p></div>
+
             </li>
             <li class="portfolio-item">
               <img
@@ -212,9 +227,11 @@
                 width="360"
                 height="300"
               />
+              <div class="cont-item">
               <h3 class="portfolio-item-title">Screen Illustrations</h3>
               <p class="portfolio-subtitle">Design</p>
-            </li>
+  </div>
+          </li>
             <li class="portfolio-item">
               <img
                 class="portfolio-image"
@@ -223,8 +240,10 @@
                 width="360"
                 height="300"
               />
+              <div class="cont-item">
               <h3 class="portfolio-item-title">Online Courses</h3>
-              <p class="portfolio-subtitle">Marketing</p>
+              <p class="portfolio-subtitle">Marketing</p></div>
+
             </li>
           </ul>
         </div>
@@ -232,7 +251,8 @@
     </main>
     <footer class="flow">
       <div class="container">
-        <a class="flow-logo header-logo" href="./index.html"
+        <a class="flow-logo header-logo" href="./index.html" style="display: inline-block;
+         margin-bottom: 16px;"
           >WEB<span class="flow-logo-stu">Studio</span></a
         >
         <p class="flow-subtitle">
