--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             </div>
 
             </li>
-            <li class="portfolio">
+            <li class="portfolio-item">
               <img
                 class="portfolio-image-4"
                 src="./images/taxi.jpg"
