--- a/index.html
+++ b/index.html
@@ -104,62 +104,61 @@
 
       <section class="team">
         <div class="container">
-            <h2 class="team-title">Our Team</h2>
-            <ul class="team-list">
-              <li class="team-item">
-                <img
-                  class="team-image"
-                  src="./images/firstimg.jpg"
-                  alt="Mark Guerrero"
-                  width="264"
-                  height="260"
-                />
-                <div class="cont-team">          
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/firstimg.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="cont-team">
                 <h3 class="team-item-title">Mark Guerrero</h3>
                 <p class="team-subtitle">Product Designer</p>
-                </div>
-              </li>
-              <li class="team-item">
-                <img
-                  class="team-image"
-                  src="./images/twise.jpg"
-                  alt="Tom Ford"
-                  width="264"
-                  height="260"
-                />
-                <div class="cont-team">
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/twise.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="cont-team">
                 <h3 class="team-item-title">Tom Ford</h3>
                 <p class="team-subtitle">Frontend Developer</p>
-                </div>
-              </li>
-              <li class="team-item">
-                <img
-                  class="team-image"
-                  src="./images/t.jpg"
-                  alt="Camila Garcia"
-                  width="264"
-                  height="260"
-                />
-                <div class="cont-team">
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/t.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="cont-team">
                 <h3 class="team-item-title">Camila Garcia</h3>
                 <p class="team-subtitle">Marketing</p>
-                </div>
-              </li>
-              <li class="team-item">
-                <img
-                  class="team-image"
-                  src="./images/imgdaniel.jpg"
-                  alt="Daniel Wilson"
-                  width="264"
-                  height="260"
-                />
-                <div class="cont-team">
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/imgdaniel.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="cont-team">
                 <h3 class="team-item-title">Daniel Wilson</h3>
                 <p class="team-subtitle">UI Designer</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="portfolio">
@@ -175,10 +174,10 @@
                 height="300"
               />
               <div class="cont-item">
-              <h3 class="portfolio-item-title">Banking App</h3>
-              <p class="portfolio-subtitle">App</p>
-     </div>
-       </li>
+                <h3 class="portfolio-item-title">Banking App</h3>
+                <p class="portfolio-subtitle">App</p>
+              </div>
+            </li>
             <li class="portfolio-item">
               <img
                 class="portfolio-image"
@@ -188,9 +187,9 @@
                 height="300"
               />
               <div class="cont-item">
-              <h3 class="portfolio-item-title">Cashless Payment</h3>
-              <p class="portfolio-subtitle">Marketing</p></div>
-
+                <h3 class="portfolio-item-title">Cashless Payment</h3>
+                <p class="portfolio-subtitle">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -200,11 +199,10 @@
                 width="360"
                 height="300"
               />
-                <div class="cont-item">
-              <h3 class="portfolio-item-title">Meditation App</h3>
-              <p class="portfolio-subtitle">App</p>
-            </div>
-
+              <div class="cont-item">
+                <h3 class="portfolio-item-title">Meditation App</h3>
+                <p class="portfolio-subtitle">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -215,9 +213,9 @@
                 height="300"
               />
               <div class="cont-item">
-              <h3 class="portfolio-item-title">Taxi Service</h3>
-              <p class="portfolio-subtitle">Marketing</p></div>
-
+                <h3 class="portfolio-item-title">Taxi Service</h3>
+                <p class="portfolio-subtitle">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -228,10 +226,10 @@
                 height="300"
               />
               <div class="cont-item">
-              <h3 class="portfolio-item-title">Screen Illustrations</h3>
-              <p class="portfolio-subtitle">Design</p>
-  </div>
-          </li>
+                <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                <p class="portfolio-subtitle">Design</p>
+              </div>
+            </li>
             <li class="portfolio-item">
               <img
                 class="portfolio-image"
@@ -241,9 +239,9 @@
                 height="300"
               />
               <div class="cont-item">
-              <h3 class="portfolio-item-title">Online Courses</h3>
-              <p class="portfolio-subtitle">Marketing</p></div>
-
+                <h3 class="portfolio-item-title">Online Courses</h3>
+                <p class="portfolio-subtitle">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -251,8 +249,10 @@
     </main>
     <footer class="flow">
       <div class="container">
-        <a class="flow-logo header-logo" href="./index.html" style="display: inline-block;
-         margin-bottom: 16px;"
+        <a
+          class="flow-logo header-logo"
+          href="./index.html"
+          style="display: inline-block; margin-bottom: 16px"
           >WEB<span class="flow-logo-stu">Studio</span></a
         >
         <p class="flow-subtitle">
