--- a/index.html
+++ b/index.html
@@ -62,41 +62,39 @@
           <button class="hero-order-btn" type="button">Order Service</button>
         </div>
       </section>
-      <section>
+      <section class="conteiner-list">
         <div class="container">
-          <div class="conteiner-list">
-            <h2 class="visually-hidden">Strategy</h2>
-            <ul class="strategy-list">
-              <li class="strategy-item">
-                <h3 class="strategy-title">Strategy</h3>
-                <p class="strategy-subtitle">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </li>
-              <li class="strategy-item">
-                <h3 class="strategy-title">Punctuality</h3>
-                <p class="strategy-subtitle">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </li>
-              <li class="strategy-item">
-                <h3 class="strategy-title">Diligence</h3>
-                <p class="strategy-subtitle">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </li>
-              <li class="strategy-item">
-                <h3 class="strategy-title">Technologies</h3>
-                <p class="strategy-subtitle">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </li>
-            </ul>
-          </div>
+          <h2 class="visually-hidden">Strategy</h2>
+          <ul class="strategy-list">
+            <li class="strategy-item">
+              <h3 class="strategy-title">Strategy</h3>
+              <p class="strategy-subtitle">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="strategy-item">
+              <h3 class="strategy-title">Punctuality</h3>
+              <p class="strategy-subtitle">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="strategy-item">
+              <h3 class="strategy-title">Diligence</h3>
+              <p class="strategy-subtitle">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="strategy-item">
+              <h3 class="strategy-title">Technologies</h3>
+              <p class="strategy-subtitle">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
 
